Dynamic stats, dynamic items, item spawning, pickup, equip, weapons used in simulateBattle, client styling, dynamic NPCs

--- a/client/app/templates/components/game-view.hbs
+++ b/client/app/templates/components/game-view.hbs
@@ -1,18 +1,20 @@
 {{yield}}
 
-{{map-view}}
-
-<h1>Hello world!</h1>
-
 <div class="game">
     <div class="feed">
-        <ul>
-            {{#each log as |str|}}
-                <li>{{str}}</li>
-            {{/each}}
-        </ul>
+        {{#each log as |str|}}
+            <div class="message">{{str}}</div>
+        {{/each}}
+
+        <div class="compose">
+            {{ input value=compose enter="sendCommand" }}
+        </div>
     </div>
-    <div class="compose">
-        {{ input value=compose enter="sendCommand" }}
+
+    <div class="interact">
+        {{map-view}} 
+
+        <!-- some other stuffs -->
+        <div class="something"></div>
     </div>
 </div>
