--- a/client/app/styles/app.css
+++ b/client/app/styles/app.css
@@ -1,7 +1,79 @@
-.map {
-    width: 512px;
-    height: 512px;
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,400i,700');
 
+body {
+    margin: 0;
+}
+
+.game {
+    width: 100vw;
+    height: 100vh;
+
+    display: flex;
+}
+
+.feed {
+    width: 75vw;
+    height: calc(100vh - 27px);
+
+    position: relative;
+    background-color: black;
+    font-family: "Roboto Mono";
+
+    padding-bottom: 27px;
+
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.feed .message {
+    width: calc(100% - 8px);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    color: white;
+    padding: 4px;
+}
+
+.compose {
+    position: absolute;
+
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    font-family: "Roboto Mono";
+}
+
+.compose input {
+    width: calc(100% - 8px);
+    border: 0;
+    outline: none;
+
+    background-color: transparent;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    color: white;
+
+    padding-left: 8px;
+    font-size: 18px;
+    font-family: "Roboto Mono";
+}
+
+.interact {
+    width: 25vw;
+    height: 100vh;
+}
+
+.map-container {
+    height: 33vh;
+    width: 100%;
+
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.something {
+    height: 67vh;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+.map {
     display: flex;
 
     flex-wrap: wrap;
@@ -23,5 +95,17 @@
     height: 8px;
     width: 8px;
     border-radius: 100%;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: rgba(255, 255, 0, 0.75);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+}
+
+.item {
+    margin-left: auto;
+    margin-top: auto;
+    margin-bottom: 2px;
+    margin-right: 2px;
+    height: 4px;
+    width: 4px;
+    border-radius: 100%;
+    background-color: rgba(255, 0, 0, 0.5);
 }
