--- a/client/app/styles/app.css
+++ b/client/app/styles/app.css
@@ -13,7 +13,7 @@ body {
 
 .feed {
     width: calc(100vw - 300px);
-    height: calc(100vh - 27px);
+    height: calc(50vh - 27px);
 
     position: relative;
     background-color: black;
@@ -31,6 +31,7 @@ body {
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     color: white;
     padding: 4px;
+    flex-shrink: 0;
 }
 
 .feed .message.blank {
@@ -68,14 +69,14 @@ body {
 }
 
 .map-container {
-    height: 300px;
+    height: 50vh;
     width: 100%;
 
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.875);
 }
 
 .something {
-    height: calc(100vh - 300px);
+    height: 100vh;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.75);
 }
